bug(ui): fix overlapped PWA install button

--- a/styles/index.css
+++ b/styles/index.css
@@ -2499,5 +2499,5 @@ button {
   color: var(--info);
   border: 2px var(--info);
   border-style: dashed;
-  width: 70dvw;
+  width: 100%;
 }
